# llm-hs

./: CHANGELOG.md  LICENSE  README.md  llm-hs.cabal
src/Web/LLM/: Calls.hs  ChatMessage.hs  Completion.hs
src/Web/LLM/Clients/: Claude.hs  Clients.hs  Gemini.hs
