cabal-version:       2.2

name:                llm-hs
version:             0.0.0.1
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/llm-hs#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2024 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Web.LLM.Calls,
                       Web.LLM.ChatMessage,
                       Web.LLM.Completion,
                       Web.LLM.Clients.Gemini,
                       Web.LLM.Clients.Clients
  build-depends:       base >= 4.7 && < 5,
                       rio,
                       aeson,
                       req
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/githubuser/llm-hs
